feat(stat): add stats feature
