# docs/swagger.json
@@ -290,6 +290,20 @@
                     "type": "string"
                 }
             }
+        },
+        "res.PaginationResponse-link_Link": {
+            "type": "object",
+            "properties": {
+                "count": {
+                    "type": "integer"
+                },
+                "items": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/link.Link"
+                    }
+                }
+            }
         }
     }
 }
